# ducklink-shim-codegen

./: AGENTS.md  Cargo.toml  README.md
src/: lib.rs  main.rs
src/emit/: mod.rs
